--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="w3-row">
   <div class="w3-half w3-black w3-container w3-center" style="height:700px">
     <div class="w3-padding-64">
-      <h1>My Logo</h1>
+      <h1>Hi There</h1>
     </div>
     <div class="w3-padding-64">
       <a href="#" class="w3-button w3-black w3-block w3-hover-blue-grey w3-padding-16">Home</a>
@@ -29,7 +29,7 @@
       <h1>About Me</h1>
       <img src="media/Formals_photo.png" class="w3-margin w3-circle" alt="Person" style="width:50%">
       <div class="w3-left-align w3-padding-large">
-        <p>Robotics enthusiast, full-time geek, Foodie and just another ordinary guitarist.</p>
+        <p>Robotics enthusiast, full-time geek, Foodie and just another everyday guitarist.</p>
         <p>Pursuing bachelors in electronics at Sardar Patel Institute of Technology</p>
       </div>
     </div>
@@ -83,32 +83,32 @@
             <th>Where</th>
           </tr>
           <tr class="w3-white">
-            <td>2012-2019</td>
+            <td>Present</td>
             <td>The rest is history..</td>
-            <td>Lorem ipsum</td>
+            <td></td>
           </tr>
           <tr>
-            <td>2019-2012</td>
-            <td>Started my own company</td>
-            <td>My Garage</td>
+            <td>Aug'19 - Present</td>
+            <td>Self driving cars specialization</td>
+            <td>UofT, Online, Coursera</td>
           </tr>
           <tr class="w3-white">
-            <td>2008-2009</td>
-            <td>Started working for Lorem</td>
-            <td>London, UK</td>
+            <td>May'19-July'19</td>
+            <td>Software intern, AR backend</td>
+            <td>Quidich labs, Andheri, India</td>
           </tr>
           <tr>
-            <td>2005-2008</td>
-            <td>Degree in Bachelor of Design</td>
-            <td>Harvard, USA</td>
+            <td>Jan'19 - May'19</td>
+            <td>Machine Learning and control systems</td>
+            <td> IIT MADRAS, Online, NPTEL</td>
           </tr>
           <tr class="w3-white">
-            <td>2002-2005</td>
-            <td>Degree in Bachelor of Business</td>
-            <td>RMIT University, Melbourne, Australia</td>
+            <td>May'18 - Jun'18</td>
+            <td>Intern and trainee</td>
+            <td>Shilpin, Aurangabad, Forbes, Thane</td>
           </tr>
           <tr class="w3-hide-medium">
-            <td>2017-Present</td>
+            <td>2017-2021(EXPECTED)</td>
             <td>Degree in Bachelor of Electronics</td>
             <td>SPIT University, Mumbai, India</td>
           </tr>
@@ -156,7 +156,7 @@
 
 <!-- Footer -->
 <footer class="w3-container w3-black w3-padding-16"><p>Find me on social media.</p>
-  <i class="fa fa-facebook-official w3-hover-opacity"></i>
+  <i class="fa fa-facebook-official w3-hover-opacity" href="https://www.w3schools.com/w3css/default.asp" target="_blank"></i>
   <i class="fa fa-instagram w3-hover-opacity"></i>
   <i class="fa fa-snapchat w3-hover-opacity"></i>
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
