Added project media for website

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <img src="media/Formals_photo.png" class="w3-margin w3-circle" alt="Person" style="width:50%">
       <div class="w3-left-align w3-padding-large">
         <p>Robotics enthusiast, full-time geek, Foodie and just another everyday guitarist.</p>
-        <p>Pursuing bachelors in electronics at Sardar Patel Institute of Technology</p>
+        <p>Pursuing bachelors in electronics at Sardar Patel Institute of Technology.</p>
       </div>
     </div>
   </div>
@@ -45,28 +45,27 @@
     </div>
     <div class="w3-row">
       <div class="w3-half">
-        <img src="media/coffee.jpg" style="width:100%">
-
+        <a href="https://github.com/ParamDeshpande/filters"><img src="media/sunset_drone.jpg" style="width:100%"></a>
       </div>
       <div class="w3-half">
-        <img src="media/coffee.jpg" style="width:100%">
+        <a href="https://github.com/ParamDeshpande/oscar_buggy"><img src="media/buggy.jpg" style="width:100%"></a>
       </div>
     </div>
     <div class="w3-row w3-hide-small">
       <div class="w3-half">
-        <img src="media/coffee.jpg" style="width:100%">
+        <a href="https://github.com/ParamDeshpande/micromouse"><img src="media/micromouse_front.jpg" style="width:100%"></a>
       </div>
       <div class="w3-half">
-        <img src="media/coffee.jpg" style="width:100%">
+        <a href="https://github.com/ParamDeshpande/Camera"><img src="media/camera_drone.jpg" style="width:100%"></a>
       </div>
     </div>
 
     <div class="w3-row w3-hide-small">
       <div class="w3-half">
-        <img src="media/coffee.jpg" style="width:100%">
+        <a href="https://github.com/ParamDeshpande/Home_Automation"><img src="media/me_soldering.jpg" style="width:100%"></a>
       </div>
       <div class="w3-half">
-        <img src="media/coffee.jpg" style="width:100%">
+        <a href="https://github.com/ParamDeshpande/Fastest-line-follower"><img src="media/line_follower.jpg" style="width:100%"></a>
       </div>
     </div><br>
     <p>Just call me awesome.</p>
@@ -74,7 +73,7 @@
   <div class="w3-half w3-indigo w3-container" style="min-height:800px">
     <div class="w3-padding-64 w3-center">
       <h2><a href="https://drive.google.com/open?id=1uCZ_ytNQ7Q-o8dZFsr0HLHyErS8aZKkL" target="_blank">Resume</a></h2>
-      <p>A draft from my CV</p>
+      <p>A draft from my <a href="https://drive.google.com/open?id=1uCZ_ytNQ7Q-o8dZFsr0HLHyErS8aZKkL" target="_blank">CV</a></p>
       <div class="w3-container w3-responsive">
         <table class="w3-table">
           <tr>
@@ -84,7 +83,7 @@
           </tr>
           <tr class="w3-white">
             <td>Present</td>
-            <td>The rest is history..</td>
+            <td>Looking for internships..</td>
             <td></td>
           </tr>
           <tr>
