--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
   </div>
   <div class="w3-half w3-indigo w3-container" style="min-height:800px">
     <div class="w3-padding-64 w3-center">
-      <h2><a href="https://drive.google.com/open?id=1uCZ_ytNQ7Q-o8dZFsr0HLHyErS8aZKkL" target="_blank">Resume</a></h2>
-      <p>A draft from my <a href="https://drive.google.com/open?id=1uCZ_ytNQ7Q-o8dZFsr0HLHyErS8aZKkL" target="_blank">CV</a></p>
+      <h2><a href="https://drive.google.com/file/d/1toTKPLoHFzef2hSoxhDgNf_ivE_xqZPJ/view?usp=sharing" target="_blank">Resume</a></h2>
+      <p>A draft from my <a href="https://drive.google.com/file/d/1toTKPLoHFzef2hSoxhDgNf_ivE_xqZPJ/view?usp=sharing" target="_blank">CV</a></p>
       <div class="w3-container w3-responsive">
         <table class="w3-table">
           <tr>
