--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <div class="w3-row w3-hide-small">
       <div class="w3-half">
-        <a href="https://github.com/ParamDeshpande/Home_Automation"><img src="media/me_soldering.jpg" style="width:100%"></a>
+        <a href="https://github.com/ParamDeshpande/Home_Automation"><img src="media/home_automation_closeup.jpg" style="width:100%"></a>
       </div>
       <div class="w3-half">
         <a href="https://github.com/ParamDeshpande/Fastest-line-follower"><img src="media/line_follower.jpg" style="width:100%"></a>
