--- a/index.html
+++ b/index.html
@@ -83,28 +83,28 @@
           </tr>
           <tr class="w3-white">
             <td>Present</td>
-            <td>Looking for internships..</td>
-            <td></td>
+            <td>Directing cinematographic Buggy</td>
+            <td>Quidich innovation labs, Andheri, India</td>
           </tr>
           <tr>
+            <td>Jan'20 - Apr'20</td>
+            <td>Self deploying drone Parachutes</td>
+            <td>Taxir Aviation, Mumbai, India</td>
+          </tr>
+          <tr class="w3-white">
             <td>Aug'19 - Present</td>
             <td>Self driving cars specialization</td>
             <td>UofT, Online, Coursera</td>
           </tr>
-          <tr class="w3-white">
+          <tr>
             <td>May'19-July'19</td>
             <td>Software intern, AR backend</td>
-            <td>Quidich labs, Andheri, India</td>
-          </tr>
-          <tr>
-            <td>Jan'19 - May'19</td>
-            <td>Machine Learning and control systems</td>
-            <td> IIT MADRAS, Online, NPTEL</td>
+            <td>Quidich innovation labs, Andheri, India</td>
           </tr>
           <tr class="w3-white">
-            <td>May'18 - Jun'18</td>
-            <td>Intern and trainee</td>
-            <td>Shilpin, Aurangabad, Forbes, Thane</td>
+            <td>Jan'19 - May'19</td>
+            <td>Machine Learning and control systems</td>
+            <td>IIT MADRAS, Online, NPTEL</td>
           </tr>
           <tr class="w3-hide-medium">
             <td>2017-2021(EXPECTED)</td>
