updated website a bit

--- a/paramdeshpande.github.io/index.html
+++ b/paramdeshpande.github.io/index.html
@@ -12,6 +12,18 @@
 <body class="w3-content" style="max-width:1300px">
 
 <!-- First Grid: Logo & About -->
+<!-- To fit the images preferable use gwenviewer ( linux default most OSes)
+
+*. For profile photo (675x675)
+*. Project Images (1100x500) 
+
+
+S1. Resize preserving aspect ratio ( choose min among x,y 
+ie other parameter should not be below the reqd threshold )
+
+S2. Once any one vals is set ( using resizing ) Crop other value to meet the needs.
+
+-->
 <div class="w3-row">
   <div class="w3-half w3-black w3-container w3-center" style="height:700px">
     <div class="w3-padding-64">
@@ -27,10 +39,10 @@
   <div class="w3-half w3-blue-grey w3-container" style="height:700px">
     <div class="w3-padding-64 w3-center">
       <h1>About Me</h1>
-      <img src="media/Formals_photo.png" class="w3-margin w3-circle" alt="Person" style="width:50%">
+      <img src="media/me_smiling.jpg.jpg" class="w3-margin w3-circle" alt="Person" style="width:50%">
       <div class="w3-left-align w3-padding-large">
         <p>Robotics enthusiast, full-time geek, Foodie and just another everyday guitarist.</p>
-        <p>Pursuing bachelors in electronics at Sardar Patel Institute of Technology.</p>
+        <p>Embedded Systems Engineer at Pravaig Dynamics. </p>
       </div>
     </div>
   </div>
@@ -45,10 +57,12 @@
     </div>
     <div class="w3-row">
       <div class="w3-half">
-        <a href="https://github.com/ParamDeshpande/filters"><img src="media/sunset_drone.jpg" style="width:100%"></a>
+        <a href="https://github.com/ParamDeshpande/oscar_buggy"><img src="media/buggy2.jpg" style="width:100%"></a>
+
       </div>
       <div class="w3-half">
-        <a href="https://github.com/ParamDeshpande/oscar_buggy"><img src="media/buggy.jpg" style="width:100%"></a>
+      <a href="https://github.com/ParamDeshpande/pointcloud"><img src="media/pointc.jpg" style="width:100%"></a>
+
       </div>
     </div>
     <div class="w3-row w3-hide-small">
@@ -56,16 +70,16 @@
         <a href="https://github.com/ParamDeshpande/micromouse"><img src="media/micromouse_front.jpg" style="width:100%"></a>
       </div>
       <div class="w3-half">
-        <a href="https://github.com/ParamDeshpande/Camera"><img src="media/camera_drone.jpg" style="width:100%"></a>
+        <a href="https://github.com/ParamDeshpande/Camera"><img src="media/film_camera.jpg" style="width:100%"></a>
       </div>
     </div>
 
     <div class="w3-row w3-hide-small">
       <div class="w3-half">
-        <a href="https://github.com/ParamDeshpande/Home_Automation"><img src="media/home_automation_closeup.jpg" style="width:100%"></a>
+        <a href=""><img src="media/sunset_drone.jpg" style="width:100%"></a>
       </div>
       <div class="w3-half">
-        <a href="https://github.com/ParamDeshpande/Fastest-line-follower"><img src="media/line_follower.jpg" style="width:100%"></a>
+        <a href="https://github.com/ParamDeshpande/Home_Automation"><img src="media/home_a.jpg" style="width:100%"></a>
       </div>
     </div><br>
     <p>Just call me awesome.</p>
@@ -82,34 +96,35 @@
             <th>Where</th>
           </tr>
           <tr class="w3-white">
-            <td>Present</td>
+            <td>Jan'21 - Present</td>
+            <td>Embedded Software Engineer</td>
+            <td>Pravaig Dynamics</td>
+          </tr>
+          <tr>
+            <td>Nov'19 - Dec '20</td>
             <td>Directing cinematographic Buggy</td>
             <td>Quidich innovation labs, Andheri, India</td>
           </tr>
-          <tr>
+          <tr class="w3-white">
             <td>Jan'20 - Apr'20</td>
             <td>Self deploying drone Parachutes</td>
             <td>Taxir Aviation, Mumbai, India</td>
           </tr>
-          <tr class="w3-white">
+          <tr>
             <td>Aug'19 - Present</td>
             <td>Self driving cars specialization</td>
             <td>UofT, Online, Coursera</td>
           </tr>
-          <tr>
+          <tr class="w3-white">
             <td>May'19-July'19</td>
             <td>Software intern, AR backend</td>
             <td>Quidich innovation labs, Andheri, India</td>
-          </tr>
-          <tr class="w3-white">
-            <td>Jan'19 - May'19</td>
-            <td>Machine Learning and control systems</td>
-            <td>IIT MADRAS, Online, NPTEL</td>
+
           </tr>
           <tr class="w3-hide-medium">
-            <td>2017-2021(EXPECTED)</td>
-            <td>Degree in Bachelor of Electronics</td>
-            <td>SPIT University, Mumbai, India</td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
         </table>
       </div>
